--- a/src/lib/i18n/lang/en.json
+++ b/src/lib/i18n/lang/en.json
@@ -360,7 +360,8 @@
           "add_checklist": "Add checklist",
           "add_attachment": "Add attachment",
           "save": "Save",
-          "cancel": "Cancel"
+          "cancel": "Cancel",
+          "close_date_setter": "Close dates."
         },
         "label": {
           "created_at": "Created at:",
@@ -382,6 +383,13 @@
         },
         "text": {
           "created_card_on": "Created this card on {date}."
+        }
+      }
+    },
+    "composnents": {
+      "cardoverlay": {
+        "section": {
+          "activity_comments": ""
         }
       }
     }
